--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-PATH_TO_SAVE = "D:\108\Test\"
-BASE_DIR = "E:\SmartTech Learning Group\\"
+PATH_TO_SAVE =D:\108\Test\
+BASE_DIR =E:\SmartTech Learning Group\\
