--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PATH_TO_SAVE =d:\108\Test\
 BASE_DIR =E:\SmartTech Learning Group\\
+name = postgres
+password = MkTbWEfE7YBhjj8l
+port = 5432
+host = db.jzqvdexjreyryogyhmdr.supabase.co
