clarifying .env file

--- a/.env_example
+++ b/.env_example
@@ -1,9 +1,7 @@
 PATH_TO_SAVE =Path where folders should be save
-BASE_DIR = d:\- Theory\XAm
+BASE_DIR = d:\- Theory\Exports\
 name = db_name and db user
 password = password of db
 port = db port
 host = db host defualt is localhost
-then rename file to .env
-
-d:\- Theory\Exports\SmartTech Learning Group\2021\2021-1\video_files\Add screens into figma.mp4
+#Then rename THIS file to .env
