updating .enf file

--- a/.env_example
+++ b/.env_example
@@ -4,4 +4,5 @@ name = db_name and db user
 password = password of db
 port = db port
 host = db host defualt is localhost
+dsn = logging to sentry than create new project, then paste here dsn starts with: https://
 #Then rename THIS file to .env
