--- a/.env_example
+++ b/.env_example
@@ -1,6 +1,7 @@
 PATH_TO_SAVE =Path where folders should be save
 BASE_DIR = d:\- Theory\Exports\
-name = db_name and db user
+db_name = your db_name 
+db_user = your db_user  
 password = password of db
 port = db port
 host = db host defualt is localhost
