catch error and send to channel via tg bot

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,6 @@ password = password of db
 port = db port
 host = db host defualt is localhost
 dsn = logging to sentry than create new project, then paste here dsn starts with: https://
+token = telegram bot token
+channel_id = channel id for send error msg
 #Then rename THIS file to .env
