update .env variables

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,10 @@ host = db host defualt is localhost
 dsn = logging to sentry than create new project, then paste here dsn starts with: https://
 token = telegram bot token
 channel_id = channel id for send error msg
+max_folder_len = 190
+max_file_len = 240
+retry_delay = 1
+retry_tries = 1000
+retry_max_delay = 1
+retry_jitter = 1
 #Then rename THIS file to .env
